--- a/src/components/skeleton/skeleton.css
+++ b/src/components/skeleton/skeleton.css
@@ -16,3 +16,7 @@
   background-color: #fff;
   border-bottom: 1px solid var(--color-grey-platinum);
 }
+
+.toolbar {
+  border-top: 1px solid var(--color-grey-platinum);
+}
