--- a/src/components/checkbox/checkbox.css
+++ b/src/components/checkbox/checkbox.css
@@ -2,7 +2,8 @@
   cursor: pointer;
 }
 
-.readonly {
+.readonly,
+.disabled {
   cursor: default;
 }
 
@@ -17,7 +18,7 @@
   transition-property: background-color, border-color;
 }
 
-.root:hover:not(.readonly) .checkbox:not(.checked) {
+.root:hover:not(.readonly):not(.disabled) .checkbox:not(.checked) {
   background-color: var(--color-grey-snow);
   border-color: var(--color-grey-slate);
 }
@@ -27,4 +28,13 @@
   border-color: var(--color-brand-blue);
   background-image: url('./assets/checked.svg');
   background-repeat: no-repeat;
+}
+
+.disabled .checked {
+  background-image: url('./assets/checked-disabled.svg');
+}
+
+.disabled .checkbox {
+  background-color: var(--color-grey-snow);
+  border: 1px solid var(--color-grey-silver);
 }
