--- a/src/components/text/text.css
+++ b/src/components/text/text.css
@@ -11,6 +11,10 @@
   line-height: 1.6em;
 }
 
+.root strong {
+  font-weight: 500;
+}
+
 .resetTransform {
   text-transform: none;
 }
@@ -103,40 +107,20 @@
   color: var(--color-brand-green);
 }
 
-.color-dark-green {
-  color: var(--color-brand-green-darker);
-}
-
 .color-orange {
   color: var(--color-brand-orange);
-}
-
-.color-dark-orange {
-  color: var(--color-brand-orange-darker);
 }
 
 .color-red {
   color: var(--color-brand-red);
 }
 
-.color-dark-red {
-  color: var(--color-brand-red-darker);
-}
-
 .color-blue {
   color: var(--color-brand-blue);
 }
 
-.color-dark-blue {
-  color: var(--color-brand-blue-darker);
-}
-
 .color-purple {
   color: var(--color-brand-purple);
-}
-
-.color-dark-purple {
-  color: var(--color-brand-purple-darker);
 }
 
 .color-none {}
