Use shared constants

--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -34,3 +34,11 @@
 .border.margin-large {
   padding-bottom: 30px;
 }
+
+.hover-underline:hover {
+  text-decoration: underline;
+}
+
+.hover-none {
+
+}
