--- a/src/components/checkbox/checkbox.css
+++ b/src/components/checkbox/checkbox.css
@@ -28,6 +28,17 @@
   border-color: var(--color-brand-blue);
   background-image: url('./assets/checked.svg');
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: initial;
+}
+
+.partial {
+  background-color: var(--color-grey-snow);
+  border-color: var(--color-brand-blue);
+  background-image: url('./assets/partial.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: initial;
 }
 
 .disabled .checked {
