--- a/src/constants/color.css
+++ b/src/constants/color.css
@@ -41,4 +41,11 @@
   --grey500: #B0BAC3;
   --grey600: #89929B;
   --grey700: #707D8A;
+
+  --color-white: #ffffff;
+  --color-grey-snow: #f9fafc;
+  --color-grey-platinum: #eceff1;
+  --color-grey-silver: #b0bec5;
+  --color-grey-slate: #547b89;
+  --color-grey-charcoal: #234957;
 }
