--- a/src/components/skeleton/skeleton.css
+++ b/src/components/skeleton/skeleton.css
@@ -4,19 +4,19 @@
 
 .paper {
   background-color: #fff;
-  border: 1px solid var(--color-grey-platinum);
+  border: 1px solid var(--grey400);
   border-radius: 3px;
 }
 
 .shape {
-  background-color: var(--color-grey-platinum);
+  background-color: var(--grey400);
 }
 
 .header {
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-platinum);
+  border-bottom: 1px solid var(--grey400);
 }
 
 .toolbar {
-  border-top: 1px solid var(--color-grey-platinum);
+  border-top: 1px solid var(--grey400);
 }
