Update missing CSS vars

--- a/src/components/paper-menu/components/paper-menu-item.css
+++ b/src/components/paper-menu/components/paper-menu-item.css
@@ -31,8 +31,8 @@
 }
 
 .highlighted {
-  background: var(--color-grey-snow);
-  color: var(--color-brand-blue);
+  background: var(--grey200);
+  color: var(--blue500);
 }
 
 .content {
